--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.11",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
-    "next": "^14.1.0",
+    "next": "^14.2.11",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
