--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "eslint-config-next": "^14.1.0",
     "next": "^14.2.11",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-modal-video": "^2.0.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-modal-video": "^2.0.1",
+    "resend": "0.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
