--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
   },
   "dependencies": {
     "@next/third-parties": "^14.2.11",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "@react-email/components": "^0.0.25",
+    "@react-email/render": "0.0.9",
+    "@react-email/tailwind": "^0.1.0",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.1",
     "next": "^14.2.11",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-modal-video": "^2.0.1",
-    "resend": "0.16.0"
+    "resend": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.9",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.2.33",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.2"
   }
 }
