--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.2.11",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-modal-video": "^2.0.1",
