--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.1",
+    "geist": "^1.3.1",
     "next": "^14.2.11",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
